--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -3208,7 +3208,7 @@
         min-width: 280px;
     }
     #popup-landing {
-        padding: 25px 15px 40px;
+        padding: 40px 15px;
     }
     .popup-landing__title {
         line-height: 37px;
